tests/callable/callable.exp
Error: primitives.js:6
  6: dict(); // error, callable signature not found
     ^^^^^^ call of `dict`. Callable signature not found in
  6: dict(); // error, callable signature not found
     ^^^^ object type

Error: primitives.js:12
 12: icall(0); // error, number ~> string
           ^ number. This type is incompatible with the expected param type of
  9:   (x: string): void;
           ^^^^^^ string

Error: primitives.js:13
 13: icall.call(null, 0); // error, number ~> string
                      ^ number. This type is incompatible with the expected param type of
  9:   (x: string): void;
           ^^^^^^ string

Error: primitives.js:20
 20: callable(0); // error, number ~> string
              ^ number. This type is incompatible with the expected param type of
 16:   (x: string): void;
           ^^^^^^ string

Error: primitives.js:21
 21: callable.call(null, 0); // error, number ~> string
                         ^ number. This type is incompatible with the expected param type of
 16:   (x: string): void;
           ^^^^^^ string


Found 5 errors
